--- a/templates/list.html
+++ b/templates/list.html
@@ -27,6 +27,7 @@
         </div>
         {% endfor%}
     </div>
+    <div id="create"><a href="{% url 'create' %}">新規投稿</a></div>
     <div id="logout"><a href="{% url 'logout' %}">ログアウト</a></div>
     <div id="copy"><p>&copy;Hiroki Sotokawa.2021-</p></div>
     <script type="text/javascript" src="{% static 'js/jquery2-1-3.min.js' %}"></script>
